# spt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth.rs  db.rs  main.rs  spotify.rs
src/models/: all_playlists.rs  currently_playing.rs  mod.rs  playlist.rs  search.rs
