[package]
name = "playlist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
base64 = "0.21.0"
reqwest = {version = "0.11.16", features = ["blocking", "json"] }
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
url-builder = "0.1.1"
webbrowser = "0.8.9"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
clap = { version = "4.2.5", features = ["cargo"] }
anyhow = "1.0.71"
